<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"
            app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
            android:id="@+id/tvDlDate"
            android:text="Date Range: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorEditText"
            app:layout_constraintStart_toStartOf="@id/glStart"        />

    <RadioGroup
            android:id="@+id/radioGroupDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/glMiddle"     >

        <RadioButton
                android:id="@+id/rdBtnWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_week"
                android:checked="false" />

        <RadioButton
                android:id="@+id/rdBtnMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_month"
                android:checked="false"
                android:layout_weight="0.13" />
        <RadioButton
                android:id="@+id/rdBtn6Month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_month"
                android:checked="false"
                android:layout_weight="0.13" />
    </RadioGroup>


    <TextView
            android:id="@+id/tvDlStatus"
            android:text="@string/_status"
            android:textColor="@color/colorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroupDate"
            app:layout_constraintStart_toStartOf="@id/glStart"        />

    <RadioGroup
            android:id="@+id/radioGroupStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroupDate"
            app:layout_constraintStart_toEndOf="@id/glMiddle"     >

        <RadioButton
                android:id="@+id/rdBtnTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:checked="false" />

        <RadioButton
                android:id="@+id/rdBtnComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:checked="false"
                android:layout_weight="0.13" />

    </RadioGroup>

    <TextView
            android:id="@+id/tvDlName"
            android:text="@string/name"
            android:textColor="@color/colorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroupStatus"
            app:layout_constraintStart_toStartOf="@id/glStart"        />

    <EditText
            android:id="@+id/edDlName"
            android:hint="type name here"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minWidth="40dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroupStatus"
            app:layout_constraintStart_toEndOf="@id/glMiddle" app:layout_constraintBottom_toBottomOf="@+id/tvDlName"/>



</androidx.constraintlayout.widget.ConstraintLayout>