<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/edTxtVw_Detail_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:hint="@string/hint_name"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorEditText"/>

    <TextView
            android:id="@+id/txtVw_ExpDate"
            android:text="@string/expire_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/edTxtVw_Detail_Name"/>


    <TextView
            android:id="@+id/txtVw_Detail_ExpDate"
            android:hint="@string/hint_expDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:textColor="@color/colorEditText"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
            app:layout_constraintTop_toBottomOf="@id/edTxtVw_Detail_Name"
            app:layout_constraintBottom_toBottomOf="@id/txtVw_ExpDate"/>


    <TextView
            android:id="@+id/txtVw_Status"
            android:text="@string/_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/txtVw_ExpDate"/>

    <RadioGroup
            android:id="@+id/radioGpStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtVw_Detail_ExpDate"
            app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
        android:orientation="horizontal">

        <RadioButton
                android:id="@+id/radBtnTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Todo"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/radBtnCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Completed"
                android:checked="false"
                android:layout_weight="0.13" />
    </RadioGroup>



    <TextView
            android:id="@+id/txtVw_Desc"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/txtVw_Status"/>

    <EditText
            android:id="@+id/edTxtVw_Detail_Desc"
            android:hint="@string/hint_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:textColor="@color/colorEditText"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/txtVw_Desc"/>

    <Button
            android:id="@+id/btn_Detail_Save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Save"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="clkSave" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edTxtVw_Detail_Desc"/>

    <TextView
            android:id="@+id/txtVw_Desc_Id"
            android:text="id"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintBottom_toTopOf="@id/btn_Detail_Save"/>

</androidx.constraintlayout.widget.ConstraintLayout>